fix(ui): remove literal \n injected by script and remove Day X text from booking modal to prevent flex overlap

--- a/day4.html
+++ b/day4.html
@@ -359,7 +359,7 @@
         body.dark-mode .tip { color: #d4a05a; }
         body.dark-mode .btn-prev { background: #1e2d4a; color: #e0e0e0; }
         body.dark-mode .nav-btns { background: transparent; }
-\n    
+    
     /* ===== 微動效與滾動動畫 (Motion & Microinteractions) ===== */
     .fade-up {
       opacity: 0;
@@ -382,7 +382,7 @@
     body.dark-mode .day-card:hover, body.dark-mode .tl-card:hover, body.dark-mode .hotel-card:hover {
       box-shadow: 0 16px 32px rgba(0,0,0,0.5) !important;
     }
-\n</style>
+</style>
 
     <style>
       .lucide { width: 1em; height: 1em; vertical-align: middle; }
@@ -414,8 +414,8 @@
     body.dark-mode .day-card:hover, body.dark-mode .tl-card:hover, body.dark-mode .hotel-card:hover {
       box-shadow: 0 16px 32px rgba(0,0,0,0.5) !important;
     }
-\n</style>
-\n<script src="https://unpkg.com/lucide@latest"></script>\n</head>
+</style>
+<script src="https://unpkg.com/lucide@latest"></script></head>
 
 <body>
     <div class="top"><a class="back" href="index.html">←</a>
@@ -573,7 +573,7 @@
             document.body.classList.add('dark-mode');
         }
     </script>
-<script>lucide.createIcons();</script>\n
+<script>lucide.createIcons();</script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       // 滾動淡入動畫
@@ -601,6 +601,6 @@
       });
     });
   </script>
-\n</body>
+</body>
 
 </html>
