--- a/day8.html
+++ b/day8.html
@@ -322,7 +322,7 @@
         body.dark-mode .tip { color: #d4a05a; }
         body.dark-mode .btn-prev { background: #1e2d4a; color: #e0e0e0; }
         body.dark-mode .nav-btns { background: transparent; }
-\n    
+    
     /* ===== 微動效與滾動動畫 (Motion & Microinteractions) ===== */
     .fade-up {
       opacity: 0;
@@ -345,7 +345,7 @@
     body.dark-mode .day-card:hover, body.dark-mode .tl-card:hover, body.dark-mode .hotel-card:hover {
       box-shadow: 0 16px 32px rgba(0,0,0,0.5) !important;
     }
-\n</style>
+</style>
 
     <style>
       .lucide { width: 1em; height: 1em; vertical-align: middle; }
@@ -377,8 +377,8 @@
     body.dark-mode .day-card:hover, body.dark-mode .tl-card:hover, body.dark-mode .hotel-card:hover {
       box-shadow: 0 16px 32px rgba(0,0,0,0.5) !important;
     }
-\n</style>
-\n<script src="https://unpkg.com/lucide@latest"></script>\n</head>
+</style>
+<script src="https://unpkg.com/lucide@latest"></script></head>
 
 <body>
     <div class="top"><a class="back" href="index.html">←</a>
@@ -562,7 +562,7 @@
             document.body.classList.add('dark-mode');
         }
     </script>
-<script>lucide.createIcons();</script>\n
+<script>lucide.createIcons();</script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       // 滾動淡入動畫
@@ -590,6 +590,6 @@
       });
     });
   </script>
-\n</body>
+</body>
 
 </html>
