--- a/day9.html
+++ b/day9.html
@@ -373,7 +373,9 @@
       box-shadow: 0 16px 32px rgba(0,0,0,0.5) !important;
     }
 </style>
-<script src="https://unpkg.com/lucide@latest"></script></head>
+<script src="https://unpkg.com/lucide@latest"></script>  <link rel="manifest" href="./manifest.json" />
+  <link rel="icon" href="./panda-icon-192.png" type="image/png" />
+  <link rel="apple-touch-icon" href="./panda-icon-192.png" />\n</head>
 
 <body>
     <div class="top"><a class="back" href="index.html">←</a>
