--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>成都深度旅遊 2026｜9天8夜｜旅途日記</title>
   <meta name="description" content="2026年成都9天8夜深度旅遊行程，國泰航空高雄出發，含九寨溝、黃龍、黃龍溪古鎮、市區美食文化等精彩行程。" />
   <meta name="theme-color" content="#3B82F6" />
-  <link rel="manifest" href="./manifest.json" />
-  <link rel="icon" href="./icon-192.png" type="image/png" />
-  <link rel="apple-touch-icon" href="./icon-192.png" />
+  
+  
+  
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
     rel="stylesheet" />
@@ -2121,7 +2121,9 @@
     }
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
-</head>
+  <link rel="manifest" href="./manifest.json" />
+  <link rel="icon" href="./panda-icon-192.png" type="image/png" />
+  <link rel="apple-touch-icon" href="./panda-icon-192.png" />\n</head>
 
 <body>
   <!-- ===== 英雄橫幅（真實照片背景 + 文化插圖裝飾） ===== -->
