fix(html): clean up literal '\n' before </head> injected by previous script

--- a/day9.html
+++ b/day9.html
@@ -375,7 +375,8 @@
 </style>
 <script src="https://unpkg.com/lucide@latest"></script>  <link rel="manifest" href="./manifest.json" />
   <link rel="icon" href="./panda-icon-192.png" type="image/png" />
-  <link rel="apple-touch-icon" href="./panda-icon-192.png" />\n</head>
+  <link rel="apple-touch-icon" href="./panda-icon-192.png" />
+</head>
 
 <body>
     <div class="top"><a class="back" href="index.html">←</a>
