--- a/index.html
+++ b/index.html
@@ -2120,7 +2120,8 @@
   <script src="https://unpkg.com/lucide@latest"></script>
   <link rel="manifest" href="./manifest.json" />
   <link rel="icon" href="./panda-icon-192.png" type="image/png" />
-  <link rel="apple-touch-icon" href="./panda-icon-192.png" />\n</head>
+  <link rel="apple-touch-icon" href="./panda-icon-192.png" />
+</head>
 
 <body>
   <!-- ===== 英雄橫幅（真實照片背景 + 文化插圖裝飾） ===== -->
