--- a/day1.html
+++ b/day1.html
@@ -389,7 +389,8 @@
 </style>
 <script src="https://unpkg.com/lucide@latest"></script>  <link rel="manifest" href="./manifest.json" />
   <link rel="icon" href="./panda-icon-192.png" type="image/png" />
-  <link rel="apple-touch-icon" href="./panda-icon-192.png" />\n</head>
+  <link rel="apple-touch-icon" href="./panda-icon-192.png" />
+</head>
 
 <body>
     <!-- 頂部導覽 -->
